// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Btn As Link 1`] = `
<a
  class="inline-block"
  href="#"
>
  Click me
</a>
`;

exports[`Storyshots Components/Btn As Router Link 1`] = `
<a
  class="router-link-exact-active router-link-active inline-block"
  href="#/"
>
  Click me
</a>
`;

exports[`Storyshots Components/Btn Default 1`] = `
<button
  class="inline-block"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Components/Btn Disabled 1`] = `
<button
  class="inline-block cursor-not-allowed opacity-50"
  disabled="disabled"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Components/Btn Type Submit 1`] = `
<button
  class="inline-block"
  type="submit"
>
  Click me
</button>
`;

exports[`Storyshots Components/Btn With Custom Classes 1`] = `
<button
  class="font-bold inline-block"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Components/Btn With Variant 1`] = `
<button
  class="inline-block bg-blue-200 text-blue-900 rounded py-2 px-4"
  type="button"
>
  Click me
</button>
`;
